e-shop example app/overlays/identity-api/lab/ingress-route-tcp.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: identity-api-ingress-route-tcp

spec:
  routes:
    - match: HostSNI(`identity-api.aks.carbon-aware-computing.com`)
      services:
        - name: identity-api
          port: 8443
  tls:
    passthrough: true
