e-shop example app/overlays/identity-api/lab/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: identity-api-ingress
  annotations: 
    traefik.ingress.kubernetes.io/router.entrypoints: web

spec:  
  rules:
  - host: identity-api.aks.carbon-aware-computing.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name:  identity-api
              port:
                number: 8080
